# simple-dcc

./: .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  FreeRTOS_Kernel_import.cmake  LICENSE  Makefile  README.md  pico_sdk_import.cmake  release-please-config.json
.github/workflows/: release-please.yml
include/: FreeRTOSConfig.h
src/: board_config.h  can_user_config.h  cdi.xml  cdi_data.c  cdi_data.h  main.c  openlcb_user_config.c  openlcb_user_config.h
src/dcc/: dcc.c  dcc.h  functions.c  functions.h  packet.c  packet.h
src/motor/: motor.c  motor.h  profile.h
src/protocol/: lcc_interface.c  lcc_interface.h  lcc_traction.c  lcc_traction.h
src/queue/: priority_queue.c  priority_queue.h
src/serial/: serial.c  serial.h
src/track/: track.c  track.h
src/util/: dbg.h  event_bus.c  event_bus.h  nv_storage.c  nv_storage.h
src/wavegen/: cutout.pio  wavegen.c  wavegen.h  wavegen.pio  wavegen_nocutout.pio  wavegen_servicemode.pio
test/: CMakeLists.txt  FreeRTOS.h  SEGGER_RTT.h  test_functions.c  test_lcc_interface.c  test_lcc_traction.c  test_packet.c  test_priority_queue_logic.c
test/hardware/: pio.h
test/pico/: unique_id.h
